dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/assignment/assignment.alg
algoritmo "erro atribuicao"

var
    teste: inteiro

inicio

    teste <- "a"

fimalgoritmo
